--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/inter": "^5.0.15",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
+    "@mui/lab": "^5.0.0-alpha.152",
     "@mui/material": "^5.14.17",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
